--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,7 +23,7 @@
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
-
+    <p><a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a></p>
 
         <div class="checkbox mb-3">
             <label>
