Création des twigs (email + front)

--- a/templates/email/newAccountEmail.html.twig
+++ b/templates/email/newAccountEmail.html.twig
@@ -7,5 +7,5 @@
 <p>Comme il s'agit de votre première connexion, veuillez suivre le lien suivant afin de créer votre mot de passe :</p>
 
 <p>
-    <a href="{{ url('app_forgot_password_request') }}">{{ url('app_forgot_password_request') }}</a>
+    <a href="{{ url('app_forgot_password_request') }}">Initialisation du mot de passe.</a>
 </p>
