Template password forgot

--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -9,13 +9,14 @@
                 <div class="col-12 col-md-6 col-lg-4 py-8 py-md-11">
 
                     <!-- Heading -->
-                    <h1 class="mb-0 fw-bold">
+                    <h1 class="mb-0 fw-bolder">
                         SwapAccess
+                        <img src="{{ asset('img/logo.png') }}" width="40">
                     </h1>
 
                     <!-- Text -->
                     <p class="mb-6 text-muted">
-                        Connexion
+                        Gérez vos accès en quelques clics.
                     </p>
 
                     <!-- Form -->
@@ -30,7 +31,7 @@
                             <label class="form-label" for="inputEmail">
                                 Adresse email :
                             </label>
-                            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus placeholder="adresse@mail.com">
+                            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus placeholder="adresse@email.com">
                         </div>
 
                         <!-- Password -->
