--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{% block title %}Bienvenue !{% endblock %}</title>
+        <title>{% block title %}SwapAccess{% endblock %}</title>
+        <link rel="icon" type="image/png" href="{{ asset('img/logo.png') }}" />
+        <link href="{{ asset('css/base.css') }}" rel="stylesheet"/>
+
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
