--- a/templates/email/createdModuleConfirmationEmail.html.twig
+++ b/templates/email/createdModuleConfirmationEmail.html.twig
@@ -70,7 +70,7 @@
                                                         <tr>
                                                             <td style="padding-right: 0px;padding-left: 0px;" align="center">
 
-                                                                <img align="center" border="0" src="{{ email.image('@images/logo+title.png') }}" alt="Logo-title" title="Logo-title" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 168.2px;" width="168.2"/>
+                                                                <img align="center" border="0" src="{{ email.image('@images/logoTitle.png') }}" alt="Logo-title" title="Logo-title" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 168.2px;" width="168.2"/>
 
                                                             </td>
                                                         </tr>
