Structure CSS+HTML+JS

--- a/templates/partner/displayUserInformations.html.twig
+++ b/templates/partner/displayUserInformations.html.twig
@@ -67,15 +67,15 @@
                 <div class="col">
 
                     <!-- Heading -->
-                    <h1 class="fw-bold text-white mb-2 text-center text-lg-start pb-5">
-                        Vos informations personnelles :
+                    <h1 class="fw-bold text-white mb-2 text-center pb-5">
+                            Espace Partenaire
                     </h1>
                     <ul>
                         <li class="fs-lg text-white-75 mb-0 text-start pb-5">
-                            Partenaire : {{ partnerName }}
+                            <p class="fw-bolder text-decoration-underline">Nom de votre franchise :</p> {{ partnerName }}
                         </li>
                         <li class="fs-lg text-white-75 mb-0 text-start pb-5">
-                            Identifiant : {{ userEmail }}
+                            <p class="fw-bolder text-decoration-underline">Adresse email :</p> {{ userEmail }}
                         </li>
                     </ul>
                 </div>
