--- a/templates/structure/displayUserInformations.html.twig
+++ b/templates/structure/displayUserInformations.html.twig
@@ -1,49 +1,199 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bonjour Partenaire !{% endblock %}
-
 {% block body %}
-    <style>
-        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    </style>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white border-bottom">
+        <div class="container">
 
-    <div class="example-wrapper">
-        <h1> Bonjour ! </h1>
-        <a href="{{ path('app_logout') }}">Se déconnecter</a>
-        <div>
-            <p>
-                Informations sur votre compte :
-            </p>
-            <p>
-                Compte :
-            </p>
-            <ul><li>{{ user }}</li></ul>
-            <p>
-                Structure :
-            </p>
-            <ul><li>{{ structure }}</li></ul>
-        </div>
+            <!-- Brand -->
+            <a class="navbar-brand" href="{{ path('app_login') }}">
+                <img src="{{ asset('img/logoTitle.png') }}" class="d-none d-md-block" alt="logo" width="250px">
+                <img src="{{ asset('img/logo.png') }}" class="d-md-none" alt="logo" width="60px">
+            </a>
 
-        <div>
-            <p>
-                Liste des modules accessibles :
-            </p>
-            <ul>
-                {% for module in userModules %}
-                    <li>{{ module }}</li>
-                {% endfor %}
-            </ul>
-        </div>
+            <!-- Toggler -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div>
-            <p>
-                Informations de votre partenaire :
-            </p>
-            <p>
-                {{ structurePartner }}
-            </p>
-            <p>{{ partnerEmail }}</p>
+            <!-- Collapse -->
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+
+                <!-- Toggler -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fe fe-x"></i>
+                </button>
+
+
+                <!-- Navigation -->
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item dropdown d-lg-none">
+                        <a class="nav-link dropdown-toggle text-center" id="navbarLandings" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+                            VOTRE COMPTE
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-xl p-0" aria-labelledby="navbarLandings">
+                            <div class="row gx-0">
+                                <div class="col-12 col-lg-6">
+                                    <div class="dropdown-body">
+                                        <div class="row gx-0">
+                                            <!-- Modules -->
+                                            <a class="dropdown-item text-center" href="#" id="modulesDropdownLink"  data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                                                Modules
+                                            </a>
+                                            <!-- Structures -->
+                                            <a class="dropdown-item text-center" href="#" id="structuresDropdownlink" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                                                Partenaire
+                                            </a>
+
+                                        </div> <!-- / .row -->
+                                    </div>
+                                </div>
+                            </div> <!-- / .row -->
+                        </div>
+                    </li>
+
+                    <!-- Button -->
+                    <a class="navbar-btn btn btn-sm btn-outline-warning lift ms-auto" href="{{ path('app_logout') }}">
+                        Se déconnecter
+                    </a>
+                </ul>
+            </div>
         </div>
-    </div>
+    </nav>
+
+    <header class="bg-black pt-13 pb-5">
+        <div class="container-md">
+            <div class="row align-items-center">
+                <div class="col">
+
+                    <!-- Heading -->
+                    <h1 class="fw-bold text-white mb-2 text-center pb-5">
+                        Espace Structure
+                    </h1>
+                    <ul>
+                        <li class="fs-lg text-white-75 mb-0 text-start pb-5">
+                            <p class="fw-bolder text-decoration-underline">Adresse email :</p> {{ user.email }}
+                        </li>
+                        <li class="fs-lg text-white-75 mb-0 text-start pb-5">
+                            <p class="fw-bolder text-decoration-underline">Adresse postale :</p> {{ structure.address }}, {{ structure.zipCode }}, {{ structure.city }}
+                        </li>
+                    </ul>
+                </div>
+            </div> <!-- / .row -->
+        </div> <!-- / .container -->
+    </header>
+
+    <!-- MAIN -->
+    <main class="pb-8 mt-md-n6 pt-8">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-3 d-none d-lg-block">
+
+                    <!-- Card -->
+                    <div class="card card-bleed border-bottom border-bottom-md-0 shadow-lg">
+
+                        <!-- Collapse -->
+                        <div class="collapse d-block" id="sidenavCollapse">
+                            <div class="card-body">
+
+                                <!-- Heading -->
+                                <h4 class="fw-bolder text-uppercase mb-3 text-center">
+                                    VOTRE COMPTE
+                                </h4>
+
+                                <!-- List -->
+                                <ul class="card-list list text-gray-700 mb-6">
+                                    <li class="list-item active" id="module-link">
+                                        <a class="list-link text-reset" href="#" id="modulesCardLink">
+                                            Modules
+                                        </a>
+                                    </li>
+                                    <li class="list-item structure-link" id="structures-link">
+                                        <a class="list-link text-reset" href="#" id="structuresCardlink">
+                                            Partenaire
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="col-12 col-md-9">
+
+                    <!-- Modules Card -->
+                    <div class="card card-bleed shadow-lg mb-6 moduleCard" id="modules-card">
+                        <div class="card-header">
+
+                            <!-- Heading -->
+                            <h2 class="mb-0 fw-bolder text-center">
+                                VOS MODULES
+                            </h2>
+                        </div>
+
+                        {% for module in user.modules %}
+                            <div class="card-body shadow-sm">
+
+                                <div class="list-group-item">
+                                    <div class="row align-items-center">
+                                        <div class="col">
+                                            <p class="mb-0">
+                                                {{ module }}
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+
+                    </div>
+
+                    <!-- Structures Card -->
+                    <div class="card card-bleed shadow-light-lg mb-6 structureCard d-none" id="structure-card">
+                        <div class="card-header">
+
+                            <!-- Heading -->
+                            <h2 class="mb-0 fw-bolder text-center">
+                                VOTRE PARTENAIRE
+                            </h2>
+                        </div>
+                            <div class="card-body shadow-sm">
+
+                                <div class="list-group-item">
+                                    <div class="row align-items-center">
+                                        <div class="col">
+                                            <p class="mb-0 bg-light text-center">
+                                            <h4 class="fw-bolder">
+                                                {{ structurePartner.name }}
+                                            </h4>
+                                            {%  if structurePartner.user %}
+                                                    <ul>
+                                                        <li class="">
+                                                           Adresse email : {{ structurePartner.user.email }}
+                                                        </li>
+                                                    </ul>
+                                            {% endif %}
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+
+                </div>
+            </div> <!-- / .row -->
+        </div> <!-- / .container -->
+    </main>
+
+
+
+
+    <footer class="py-8 bg-black">
+        <a href="{{ path('app_login') }}">
+            <img src="{{ asset('img/logo.png') }}" width="100px" alt="Logo" class="rounded mx-auto d-block">
+        </a>
+    </footer>
+
 {% endblock %}
+
