--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -18,7 +18,7 @@
                     </p>
 
                     <!-- Link -->
-                    <a class="btn btn-primary" href="{{ path('app_login') }}">
+                    <a class="btn btn-primary" href="{{ path('app_logout') }}">
                         Revenir en lieu sûr
                     </a>
 
